--- a/src/app/sales/sales.component.scss
+++ b/src/app/sales/sales.component.scss
@@ -14,12 +14,42 @@
 }
 
 .product img {
-    width: 150px;
-    height: 150px;
+   width: 100%;
+  height: 200px;
+  object-fit: cover;
+border-radius: 0.5rem;
+transition: 0.3s;
+}
+
+.product img:hover {
+    scale: 1.1;
+}
+
+h1 {
+margin-left: 43%;
 }
 
 .product {
-    background-color: rgba(0, 78, 119, 0.162);
-    padding: 0.5rem;
+    background-color: rgba(0, 77, 119, 0.087);
+    padding: 0.7rem;
     border-radius: 0.35rem;
+    cursor: pointer;
+    transition: 0.3s;
+    height: 25rem;
+    width: 16.7rem;
+}
+
+
+.product:hover {
+    scale: 1.1;
+    background-color: rgba(0, 97, 149, 0.175);
+}
+
+.cardEnd {
+    position: relative;
+    top: 4.5rem;
+    align-self: flex-end;
+}
+.discounted-price {
+    color: rgb(0, 220, 0);
 }
