--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -389,6 +389,7 @@ top: 1.1rem;
 .card:hover {
   transform: scale(1.05);
   box-shadow: 0 22px 22px rgba(0, 102, 157, 0.298);
+    background-color: rgba(40, 90, 108, 0.23);
 }
 
 .card-text {
