--- a/src/app/sales/sales.component.scss
+++ b/src/app/sales/sales.component.scss
@@ -37,6 +37,7 @@ margin-left: 43%;
     transition: 0.3s;
     height: 25rem;
     width: 16.7rem;
+    border: 7px solid rgba(0, 84, 101, 0.032);
 }
 
 
