--- a/src/app/favorites/favorites.component.scss
+++ b/src/app/favorites/favorites.component.scss
@@ -2,25 +2,124 @@
     width: 100%;
     height: 8.51rem;
 }
+
+h2 {
+    position: relative;
+    display: inline-block;
+    left: 44%;
+    font-family: cursive;
+    margin-bottom: 1.7rem;
+    color: rgba(0, 46, 56, 0.63);
+}
+
 .favProdsDiv {
 display: flex;
 flex-wrap: wrap;
-gap: 2rem;
+gap: 1.1rem;
 background-color: rgba(2, 117, 109, 0.088);
 position: relative;
 left: 1rem;
+padding: 1rem;
+border-radius: 0.3rem;
+width: 97.5%;
+font-family: cursive;
 }
 .favProd {
 background-color: rgba(0, 47, 70, 0.157);
-border-radius: 0.35rem;
+border-radius: 0.55rem;
 padding: 1rem;
 margin: 0.5rem;
+display: flex;
+flex-direction: column;
+justify-content: space-between;
+cursor: pointer;
+transition: 0.3s;
+z-index: 999;
+width: 20rem;
+height: 370px;
+overflow: hidden;
 }
+
+.favProd:hover {
+    scale: 1.05;
+}
+
 p {
    width: 300px;
+   margin: 0.1rem;
 }
 
 .favProd img {
     width: 150px;
     height: 160px;
+    transition: 0.3s;
+    cursor: pointer;
+    border-radius: 0.5rem;
+}
+.favProd img:hover {
+    scale: 1.1;
+}
+
+.deleteFavButton {
+position: absolute;
+align-self: flex-end;
+height: 40px;
+border: none;
+background-color: rgba(0, 79, 77, 0);
+font-size: 1.3rem;
+}
+.deleteFavButton:hover {
+    color: rgb(0, 161, 126);
+    scale: 1.4;
+}
+
+.deleteFavButton::after {
+    content: "Remove from favorites";
+    position: absolute;
+    bottom: 90%;
+    font-size: 0.7rem;
+    margin-left: -2rem; 
+    padding-right: 0.3rem;
+    padding-left: 0.3rem;
+    transform: translateX(-50%);
+    border-radius: 0.3rem;
+    background-color: #0000009f;
+    color: rgb(255, 255, 255);
+    white-space: nowrap;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.2s ease-in-out;
+    z-index: 999999999;
+}
+.deleteFavButton:hover::after {
+  opacity: 1;
+   z-index: 999999999;
+}
+
+.favProdInsideDiv {
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.description {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  max-width: 300px; /* if you want a limit */
+  width: auto;
+  text-overflow: ellipsis;
+  max-height: 5.5rem;
+  transition: max-height 0.2s ease-in-out;
+}
+
+.favProd:hover .description {
+  overflow-y: auto;
+  max-height: 200px; 
+}
+
+.discounted-price {
+    color: green;
 }
