--- a/src/app/admin-interface/admin-interface.component.scss
+++ b/src/app/admin-interface/admin-interface.component.scss
@@ -195,24 +195,175 @@ scale: 1;
   display: block;
 }
 
+// Sales=====================
+
 .saleProdsDiv {
-    background-color: rgba(0, 113, 128, 0.069);
+    background-color: rgba(0, 102, 116, 0.033);
     padding: 2rem;
     border-radius: 0.7rem;
-    display: flex;
-    flex-wrap: wrap;
+    margin-top: 2rem;
 }
 
+.saleDecorDiv {
+    display: flex;
+    gap: 1rem;
+    flex-wrap: wrap;
+    margin-top: 1.35rem;
+}
+
+.removeProdFromSaleButton {
+    position: absolute;
+    margin-left: 12.5rem;
+    margin-top: -1rem;
+    width: 1.8rem;
+    background-color: transparent;
+    border: none;
+    font-size: 1.7rem;
+    font-family: cursive;
+    color: rgba(0, 89, 136, 0.837);
+}
+.removeProdFromSaleButton:hover {
+    scale: 1.15;
+    color: rgb(0, 166, 255);
+}
+
+.removeProdFromSaleButton::after {
+    content: "remove from sale";
+  position: absolute;
+    bottom: 90%;
+    font-size: 0.7rem;
+    margin-left: -2rem; 
+    padding-right: 0.3rem;
+    padding-left: 0.3rem;
+    transform: translateX(-50%);
+    border-radius: 0.3rem;
+    background-color: #0000009f;
+    color: rgb(255, 255, 255);
+    white-space: nowrap;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.2s ease-in-out;
+    z-index: 999999999;
+ }
+ .removeProdFromSaleButton:hover::after {
+    opacity: 1;
+    z-index: 99999999;
+ }
+
 .productOnSale {
-        height: 25rem;
-    width: 16.7rem;
+    height: 27rem;
+    width: 15.7rem;
+    padding: 1rem;
+    background-color: rgba(0, 124, 128, 0.152);
+    border-radius: 0.7rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 1.1rem;
+    transition: 0.3s;
+    cursor: pointer;
+}
+.productOnSale:hover {
+    scale: 1.03;
+}
+
+.saleProdEnd {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    left: 0;
 }
 
 .saleProdImage {
-       width: 100%;
-  max-height: 100%;
-  object-fit: cover;
-border-radius: 0.5rem;
-transition: 0.3s;
-  object-fit: cover;
+   width: 100%;
+   max-height: 100%;
+   object-fit: cover;
+   border-radius: 0.5rem;
+   transition: 0.3s;
+   object-fit: cover;
+   margin-top: 0.5rem;
+}
+
+.saleProdImage:hover {
+    scale: 1.1;
+}
+
+.saleTitle {
+    color: rgba(0, 70, 121, 0.71);
+}
+.saleDescription {
+    color: rgba(0, 119, 53, 0.688);
+}
+
+.saleNameEdit {
+    display: flex;
+    gap: 0.7rem;
+}
+
+.saleDescriptionEdit {
+    display: flex;
+    gap: 0.7rem;
+}
+
+.saleDiscountEdit {
+    display: flex;
+    gap: 0.7rem;
+}
+
+.saleEdit button {
+    border-radius: 0.5rem;
+    background-color: rgba(117, 0, 0, 0.643);
+    font-size: smaller;
+    height: 1.5rem;
+    position: relative;
+    top: 0.2rem;
+}
+.saleEdit button:hover {
+    scale: 1.1;
+    background-color: rgba(247, 0, 0, 0.785);
+}
+
+.addSaleButton {
+    border-radius: 0.5rem;
+    background-color: rgba(0, 101, 151, 0.472);
+}
+.addSaleButton:hover {
+    background-color: rgba(0, 208, 255, 0.889);
+    scale: 1.1;
+}
+.addSaleButton:active {
+    scale: 1;
+    background-color: rgba(0, 101, 151, 0.472);
+}
+
+.addSaleDiv {
+    display: flex;
+    gap: 1rem;
+}
+
+.saleIsActive {
+    color: rgb(125, 209, 0);
+}
+
+.saleInputs {
+    display: flex;
+    gap: 0.5rem;
+}
+
+.saleInputs input {
+    border-radius: 0.5rem;
+    background-color: rgba(0, 82, 98, 0.106);
+}
+
+.addSaleFinalButton {
+    border-radius: 0.5rem;
+    background-color: rgba(0, 117, 111, 0.357);
+}
+.addSaleFinalButton:hover {
+    scale: 1.1;
+    background-color: rgba(0, 232, 220, 0.894);
+}
+.addSaleFinalButton:active {
+    scale: 1;
+    background-color: rgba(0, 117, 111, 0.357);
 }
