--- a/src/app/sales/sales.component.scss
+++ b/src/app/sales/sales.component.scss
@@ -65,7 +65,7 @@ background-color: rgba(43, 103, 131, 0.068);
 
 .saleTitle {
     position: relative;
-    left: 45.9%;
+    margin-left: 45.9%;
     font-family: cursive;
     font-family: cursive;
     color: rgb(0, 163, 155);
