--- a/src/app/admin-interface/admin-interface.component.scss
+++ b/src/app/admin-interface/admin-interface.component.scss
@@ -145,6 +145,25 @@ gap: 2rem;
     scale: 1;
 }
 
+.subCategDeleteButton {
+    position: relative;
+    padding: 0;
+    width: 4rem;
+    background-color: rgba(0, 73, 98, 0.132);
+    border-radius: 0.5rem;
+    font-family: cursive;
+    align-self: flex-end;
+}
+.subCategDeleteButton:hover {
+    background-color: rgba(0, 191, 255, 0.839);  
+    scale: 1.05; 
+}
+.subCategDeleteButton:active {
+    background-color: rgba(0, 73, 98, 0.132);  
+    scale: 1;  
+}
+
+
 .categ {
     background-color: rgba(0, 116, 183, 0.18);
     padding: 0.5rem;
@@ -293,7 +312,7 @@ scale: 1;
 .product-checkbox-list {
 position: absolute;
 left: 45rem;
-top: 10rem;
+top: 10.9rem;
 }
 
 .checkbox-scroll {
