--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -945,3 +945,77 @@ gap: 1rem;
   scale: 1;
   background-color: rgba(0, 128, 0, 0.192);
 }
+
+.addToSaleFinalButton {
+    border-radius: 0.5rem;
+  background-color: rgba(0, 128, 0, 0.192);
+  font-weight: 300;
+  font-size: small;
+  font-family: cursive;
+  height: 1.7rem;
+  position: relative;
+  top: 0.17rem;
+}
+.deleteProductButton {
+  position: absolute;
+  margin-left: 14.5rem;
+  z-index: 99;
+  border: none;
+  background-color: transparent;
+  font-size: 1.7rem;
+  color: rgba(0, 36, 102, 0.944);
+}
+.deleteProductButton:hover {
+  font-size: 1.9rem;
+  color: rgb(215, 0, 0);
+}
+.deleteProductButton:active {
+  font-size: 1.7rem;
+  color: rgba(0, 36, 102, 0.944);
+}
+.deleteProductButton::after {
+   content: "remove product (admin)";
+  position: absolute;
+    bottom: 90%;
+    font-size: 0.7rem;
+    margin-left: -2rem; 
+    padding-right: 0.3rem;
+    padding-left: 0.3rem;
+    transform: translateX(-50%);
+    border-radius: 0.3rem;
+    background-color: #0000009f;
+    color: rgb(255, 255, 255);
+    white-space: nowrap;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.2s ease-in-out;
+    z-index: 99;
+}
+.deleteProductButton:hover::after {
+  opacity: 1;
+  z-index: 99;
+}
+
+.testBtn {
+  margin-left: 1rem;
+}
+.addToSaleFinalButton:hover {
+  background-color: rgba(0, 237, 142, 0.789);
+  scale: 1.05;
+}
+.addToSaleFinalButton:active {
+  background-color: rgba(0, 128, 0, 0.192);
+  scale: 1;
+}
+
+.addProductToSaleInps {
+  position: absolute;
+  display: flex;
+  top: 18.7rem;
+  gap: 0.3rem;
+}
+.addProductToSaleInps input {
+  position: relative;
+  left: 0.7rem;
+  width: 7rem;
+}
