--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -51,16 +51,16 @@ nav {
 
 .inps {
   position: relative;
-  top: 15rem;
+  top: 6.5rem;
   display: flex;
   flex-direction: column;
-  width: 20%;
-  left: 41%;
-  gap: 2rem;
+  width: 25%;
+  left: 39%;
+  gap: 0.5rem;
   background-color: rgba(63, 131, 114, 0.735);
   border-radius: 0.35rem;
   padding: 1rem;
-  
+  max-height: 80%;
 }
 
 .inps input {
@@ -69,13 +69,31 @@ nav {
   color: rgb(4, 21, 255);
   border-radius: 0.35rem;
 }
-.inps button:hover {
-  color: red;
-  transform: scale(1.1);
+
+.image-preview-list {
+  max-width: 320px;
+  height: 130px;
+  overflow-y: auto;
+  border: 1px solid #ccc;
+  padding: 10px; 
+  margin-top: 10px;
 }
-.inps button:active {
+
+.addProdButton {
+background-color: rgb(0, 94, 128);
+width: 7rem;
+border-radius: 0.5rem;
+margin-bottom: 1rem;
+}
+.addProdButton:hover {
+  color: red;
+  transform: scale(1.05);
+}
+.addProdButton:active {
   transform: scale(1);
 }
+
+// prod...end //////////////////////
 
   .navLogoDiv:active {
     transform: scale(0.95);
