--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -33,10 +33,8 @@
   
       <div class="navelementss">
         <a class="navElement" [routerLink]="['/Sales']">Sales</a>
-        <a class="navElement" [routerLink]="['/Favorites']">Favorites</a>
-        <a class="navElement" [routerLink]="['/Contact']">Contact</a>
+        <a class="navElement" [routerLink]="['/Favorites']">favorite products</a>
         <a class="navElement" [routerLink]="['/About']">About</a>
-        <a class="navElement" [routerLink]="['/Blog']">Blog</a>
       </div>
   
       
